--- a/index.html
+++ b/index.html
@@ -3,9 +3,33 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Example xx</title>
   </head>
   <body>
-    hi 5.....
+    <h1>Title</h1>
+    <h2>sub title</h2>
+    <b>Bold text</b>
+    <i>Italic text</i>
+    <u>Underlined text</u>
+    <small>Smaller text</small>
+    <mark>Highlighted text</mark>
+    <em>Emphasized text</em>
+    <strong>Important text</strong>
+    <a href="https://www.google.com" target="_blank" title="visit Google"
+      >Go to Google</a
+    >
+    <a
+      href="https://www.au.edu"
+      target="_blank"
+      title="Visit Assumption University"
+      >AU Website</a
+    >
+    <br />
+    <img
+      src="public/images/images.png"
+      alt="My Photo"
+      width="300"
+      height="200"
+    />
   </body>
 </html>
