image path fixed

--- a/index.html
+++ b/index.html
@@ -26,10 +26,30 @@
     >
     <br />
     <img
-      src="public/images/images.png"
+      src="/hello-web-5/public/images/images.png"
       alt="My Photo"
       width="300"
       height="200"
     />
+
+    <ul>
+      <li>Apple</li>
+
+      <li>Banana</li>
+
+      <li>Orange</li>
+    </ul>
+
+    <ol>
+      <li>First item</li>
+
+      <li>Second item</li>
+
+      <li>Third item</li>
+    </ol>
+
+    <div>DIV 1 <span>span 1</span></div>
+
+    <div>DIV 2</div>
   </body>
 </html>
